--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "solve": "tsx ./utils/run-solution.ts",
     "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
